--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/assets",
+              "src/assets/images",
               "src/favicon.ico"
             ],
             "styles": [
